Refactor ImageCarousel items in glass index.mdx for improved formatting and readability

--- a/content/tema/glass/index.mdx
+++ b/content/tema/glass/index.mdx
@@ -33,40 +33,46 @@ Det er jo artig at produsenten av flasken åpenbart lot seg inspirer av det enge
 
 
 <ImageCarousel className="feature" title="Glass!">
-  <ImageCarousel.Item> 
+  <ImageCarousel.Item
     image="/images/glass/By136_flaske.jpg" 
     imageAlt="En glassflaske formet som pistol, i blått glass 36 cm lang"
-  > Glassflasken formet som en pistol. Foto: Stine Dornfest, Universitetsmuseet i Bergen
+  > 
+    Glassflasken formet som en pistol. Foto: Stine Dornfest, Universitetsmuseet i Bergen
   </ImageCarousel.Item>
 
-  <ImageCarousel.Item> 
+  <ImageCarousel.Item
     image="/images/glass/Christie sitt notat.png" 
     imageAlt="Et arkiv med håndskriften til Christie, hvor han beskriver glassflasken"
-  > W.F.K. Christie sitt notat om glassflasken (Universitetsbiblioteket i Bergen)
+  >
+    W.F.K. Christie sitt notat om glassflasken (Universitetsbiblioteket i Bergen)
   </ImageCarousel.Item>
 
-  <ImageCarousel.Item> 
+  <ImageCarousel.Item
     image="/images/glass/ubb-nor-b-0723_xl_Glassmagasin.jpg" 
     imageAlt="Foto av glassmagasinet i Bergen. En kvinne og en mann står i butikken og ser på glass."
-  > Foto fra Glassmagasinet i Bergen. Foto: Norvin reklamefoto 
+  > 
+    Foto fra Glassmagasinet i Bergen. Foto: Norvin reklamefoto 
   </ImageCarousel.Item>
 
-  <ImageCarousel.Item> 
+  <ImageCarousel.Item
     image="/images/glass/B7237_glassperler.jpg" 
     imageAlt="8 blå glassperler fra vikingtid tredd på en tråd "
-  > Blå glassperler fra Vikingtid (B7234). Foto: Svein Skare, Universitetsmuseet i Bergen 
+  > 
+    Blå glassperler fra Vikingtid (B7234). Foto: Svein Skare, Universitetsmuseet i Bergen 
   </ImageCarousel.Item>
 
-  <ImageCarousel.Item> 
+  <ImageCarousel.Item
     image="/images/glass/ubb-kk-n-381-012_HotelBristol.jpg" 
     imageAlt="Foto fra Hotel Bristol med pyntet langbord"
-  > Langbord på Hotel Bristol pyntet til fest. Foto: Atelier KK  
+  > 
+    Langbord på Hotel Bristol pyntet til fest. Foto: Atelier KK  
   </ImageCarousel.Item>
 
-  <ImageCarousel.Item> 
+  <ImageCarousel.Item
     image="/images/glass/B2272_glassbeger.jpg" 
     imageAlt="Lysegrønt, gjennomsiktig glassbeger fra Folkevandringstid."
-  > Beger i glass fra Folkevandringstid (B2272) Funnet på Klepp i Rogaland. Foto: Adnan Icagic, Universitetsmuseet i Bergen. 
+  > 
+    Beger i glass fra Folkevandringstid (B2272) Funnet på Klepp i Rogaland. Foto: Adnan Icagic, Universitetsmuseet i Bergen. 
   </ImageCarousel.Item>
 
 </ImageCarousel>
