--- a/content/tema/glass/index.mdx
+++ b/content/tema/glass/index.mdx
@@ -17,18 +17,15 @@ import { Card, Cards } from '@/components/card'
     <HeroTitle>
       Glass
     </HeroTitle>
-    <HeroDescription>
-      Her er en liste over temaene
-    </HeroDescription>
   </HeroContent>
 </Hero>
 
 <ContentGrid>
-## «Museets Brændevins-Flaske»
 
 Samlingene våre er fulle av glass, brukt til både hverdag og fest!  Vi finner glassperler fra vikingtid, nydelige glassmalerier og bruksgjenstander av glass. I arkivene finner vi informasjon om alt fra gjenstandene i samlingene, arkivene etter glarmesterlaugene i Bergen, og vi finner foto hvor glass har en hovedrolle. Eksemplene er mange og gir oss et godt innblikk i hvilke variasjoner som finnes i samlingene og arkivene.
 En helt spesiell kuriositet finner vi i museets bysamling. I 1828 får museet en glassflaske i gave fra kaptein Rummelhoff. Flasken er laget av nydelig blått glass og er formet som en pistol! Den er 36, 5 cm lang og 9 cm på sitt bredeste og er dekorert i emaljefarger på en detaljert måte, slik at det skal ligne en pistol. 
-I sine notater skriver museets grunnlegger Wilhelm Frimann Koren Christie (1778-1849) om denne glassflasken. Han definerer den som en «Brændevins-Flaske» og beskriver videre dens utseende. Han setter også objektet inn i en større kontekst, som i notatets punkt 2; «for Faconens Skyld; I England kalder man endu en Lomme-flaske til Brændevin: Pocket Pistol»
+I sine notater skriver museets grunnlegger Wilhelm Frimann Koren Christie (1778-1849) om denne glassflasken. Han definerer den som en «Brændevins-Flaske» og beskriver videre dens utseende. Han setter også objektet inn i en større kontekst, som i notatets punkt 2; 
+*for Faconens Skyld; I England kalder man endu en Lomme-flaske til Brændevin: Pocket Pistol*
 Det er jo artig at produsenten av flasken åpenbart lot seg inspirer av det engelske begrepet «Pocket Pistol»!
 
 
