--- a/content/tema/glass/index.mdx
+++ b/content/tema/glass/index.mdx
@@ -74,7 +74,7 @@ Det er jo artig at produsenten av flasken åpenbart lot seg inspirer av det enge
 
 </ImageCarousel>
 
-{/* <Cards title="Historier om glass">
+<Cards title="Historier om glass">
 
   <Card title="Om Bergens Glasmesterlaug»" 
   description="Dykk ned i arkivene til Glarmesterlauget (glassmestere) i Bergen" 
@@ -111,7 +111,7 @@ Det er jo artig at produsenten av flasken åpenbart lot seg inspirer av det enge
     href="" 
   />
 
-</Cards> */}
+</Cards> 
 
 
 </ContentGrid>
