legg til ny side

--- a/content/tema/glass/index.mdx
+++ b/content/tema/glass/index.mdx
@@ -101,7 +101,7 @@ Det er jo artig at produsenten av flasken åpenbart lot seg inspirer av det enge
     description="Les mer om Octavias Sperati og hennes epergne" 
     image="/nav-card-images/vintage-fish-illustration.jpg" 
     imageAlt="" 
-    href="" 
+    href="/tema/glass/octavia-sperati" 
   />
    <Card 
     title="Statsminister Michelsens dødsbo" 
