--- a/content/tema/kirkekunst/index.mdx
+++ b/content/tema/kirkekunst/index.mdx
@@ -27,8 +27,104 @@ import { Card, Cards } from '@/components/card'
 </Hero>
 
 <ContentGrid>
-{/* <Cards title="Historier om fisk">
-  <Card title="Christie og de «mærkelige Fiske»" description="" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="Fisk" href="/tema/fisk/christie-og-de-maerkelige-fiske" />
-</Cards> */}
+Kirkekunsten har vært viktig for museet helt siden opprettelsen i 1825. Allerede i invitasjonen om å opprette et museum definerte museets grunnlegger W.F.K. Christie hvilke 
+gjenstandskategorier han ønsket å samle inn til sitt nye museum. En av kategoriene var *Levninger af den catholske Cultus*, eller kirkekunst fra middelalderen. Christie 
+fikk også med seg biskop i Bergen Jacob Neumann inn i Direksjonen (museumsstyre). Samarbeide dem imellom førte til at museet i dag har en enestående samling av kirkekunst.
+
+Innsamlingen bestod i stor grad av kirkekunst fra middelalderen og det er den samlingen som er mest kjent i dag. Men museet har også en flott samling av kirkekunst fra 
+etter-reformatorisk tid (1536). 
+
+Den første gjenstanden som blir beskrevet i Bergens Museums katalog over *Kirkelige Gjenstande yngre end Reformationen*, er altertavlen fra Ørskog kirke (NK1). 
+I katalogen kan vi lese en detaljert beskrivelse av altertavlen, som også forteller om de bibelske motivene. Nederst på tavlen finner vi motiv fra nattverden, og videre 
+oppover korsfestelsen og på toppen av tavlen oppstandelsen.
+
+Grunnen til at altertavlen endte på museum er interessant. Da det nye kirkebygget ble innviet i Ørskog i 1874 hadde kirken en del inventar man ikke ønsket å benytte i den 
+nye kirken.  Vi kan lese i "Bergens Adresse-Contoirs Efterretninger" den 19.jaunar 1885 at; *Bergens Stiftsdirection anmodet Ørskogs Formandskab om at afstaa til Museet en 
+gammel Altertavle*. I møteboken til Ørskog formannskap finner vi vedtaket den 3. januar 1885 om å gi altertavle i gave til Bergens Museum.
+
+Siden den gang har altertavlen vært en sentral del av museets utstillinger, sist sett i Kirkekunstutstillingen, som nå kan oppleves digitalt.
+
+<ImageCarousel className="feature" title="Kirkekunst">
+  <ImageCarousel.Item 
+    image="/images/kirkekunst/NK1_jutstilling.jpg" 
+    imageAlt="Bilde av altertavlen i utstillingsrom. Her er mange andre altertavler. Altertavlen står på gulvet og rekker nesten opp i taket. "
+  >
+     Altertavlen fra Ørskog kirke i utstilling. Foto Adnan Icagic, Universitetsmuseet i Bergen
+  </ImageCarousel.Item>
+  <ImageCarousel.Item 
+    image="/images/kirkekunst/Altertavle_NK1.jpg" 
+    imageAlt="Nærbilde av Altertavlen. Viser nattverden neders, korsdestelsen i midten og oppstaandelsen øverst. Mye farger i rødt, grønt, blått og gull "
+  >
+    Nærbilde av altertavlen fra Ørskog kirke. Foto Svein Skare, Universitetsmuseet i Bergen 
+  </ImageCarousel.Item>
+  <ImageCarousel.Item 
+    image="/images/kirkekunst/A012L0001_Kirkekunstkatalog.png" 
+    imageAlt="Bilde av to sider i museumskatalogen som beskriver gjenstanden. På venstre side er det er foto av altertavlen"
+  >
+    Den første siden i katalogen over nyere kirkekunst ved museet (Skjermbilde Digitalarkivet) 
+  </ImageCarousel.Item>
+  <ImageCarousel.Item 
+    image="/images/kirkekunst/AV_Innbydelsen.jpg" 
+    imageAlt="Forsiden av innbydelsen museets grunnlegger Christie sendte ut. Trykket med gotiske bokstaver"
+  >
+    Innbydelsen om å opprette et museum sendt ut av W.F.K. Christie sendte ut april 1825 
+  </ImageCarousel.Item>
+  <ImageCarousel.Item 
+    image="/images/arkeologi/Tema-2021-Figur-1-Fosseringen-G-Hansen-750x615.jpg" 
+    imageAlt="Gravene på Myklebostad paa Nordfjordeid."
+  >
+    Figur 5. Shetelig sin rapport fra 1902 
+  </ImageCarousel.Item>
+  <ImageCarousel.Item 
+    image="/images/kirkekunst/ubb-kk-1318-3082x_xl.jpg" 
+    imageAlt="Foto i svart hvitt. Man ser Ørskog kirke like ved fjorden, med fjell og natur rundt."
+  >
+    Foto av Ørskog kirke. Foto: Knud Knudsen. 
+  </ImageCarousel.Item>
+</ImageCarousel>
+
+<Cards title="Historier om kirkekunst">
+  <Card title="Kirkekunst 360" 
+  description="Opplev museets unike kirkekunstsamling med å vandre rundt i utstillingen digitalt" 
+  image="/nav-card-images/vintage-fish-illustration.jpg" 
+  imageAlt="Fisk" 
+  href="https://kuula.co/share/collection/7J7Sx?logo=1&info=0&fs=1&vr=1&zoom=1&initload=0&thumbs=-1" 
+  />
+  <Card 
+    title="Middelalderens kirkekunst" 
+    description="Få innblikk i museets kirkekunstsamling fra Middelalder" 
+    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    imageAlt="" 
+    href="https://kirkekunst.w.uib.no/" 
+  />
+  <Card 
+    title="Nedstrynfrontalen" 
+    description="Historien til den berømte nedstrynfrontalen" 
+    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    imageAlt="" 
+    href="https://tohundrefortellinger.w.uib.no/1826/09/26/1826-nedstrynfrontalen/" 
+  />
+  <Card 
+    title="Hovemadonnaen" 
+    description="Om madonnafiguren som kom til museet i 1840" 
+    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    imageAlt="" 
+    href="https://tohundrefortellinger.w.uib.no/1840/01/01/1840-hovemadonnaen/" 
+  />
+  <Card 
+    title="Hvem var biskop Jacob Neumann?" 
+    description="Bisop i Bergen og en av grunnleggerne av Bergens Museum" 
+    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    imageAlt="" 
+    href="https://tohundrefortellinger.w.uib.no/1848/09/27/1848-biskop-jacob-neumann-og-museet/" 
+  />
+  <Card 
+    title="Stavkirkeportalene fra Stedje" 
+    description="Museet har flere portaler fra stavkirker i sin samling, en av disse er fra Stedje" 
+    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    imageAlt="" 
+    href="https://tohundrefortellinger.w.uib.no/1867/06/20/1866/" 
+  />
+</Cards>
 
 </ContentGrid>
