--- a/content/tema/det-store-utland/index.mdx
+++ b/content/tema/det-store-utland/index.mdx
@@ -1,10 +1,10 @@
 ---
-title: Det store utland
-description: Dette er en beskrivelse av temaet det store utland.
+title: Verden i Bergen
+description: Dette er en beskrivelse av temaet Verden i Bergen.
 keywords: 
-  - utland
+  - etnografi
   - land
-  - utenriks
+  - samlinger
 asIndexPage: true
 ---
 
@@ -26,9 +26,64 @@ import { Card, Cards } from '@/components/card'
 </Hero>
 
 <ContentGrid>
+SETT INN TEKST NÅR KLART
 
-{/* <Cards title="Historier om fisk">
-  <Card title="Christie og de «mærkelige Fiske»" description="" image="/nav-card-images/vintage-fish-illustration.jpg" imageAlt="Fisk" href="/tema/fisk/christie-og-de-maerkelige-fiske" />
-</Cards> */}
+<ImageCarousel className="feature" title="Verden i Bergen">
+  <ImageCarousel.Item
+    image="/images/glass/By136_flaske.jpg" 
+    imageAlt="En glassflaske formet som pistol, i blått glass 36 cm lang"
+  > 
+    Glassflasken formet som en pistol. Foto: Stine Dornfest, Universitetsmuseet i Bergen
+  </ImageCarousel.Item>
+
+  <ImageCarousel.Item
+    image="/images/glass/Christie sitt notat.png" 
+    imageAlt="Et arkiv med håndskriften til Christie, hvor han beskriver glassflasken"
+  >
+    W.F.K. Christie sitt notat om glassflasken (Universitetsbiblioteket i Bergen)
+  </ImageCarousel.Item>
+
+  <ImageCarousel.Item
+    image="/images/glass/ubb-nor-b-0723_xl_Glassmagasin.jpg" 
+    imageAlt="Foto av glassmagasinet i Bergen. En kvinne og en mann står i butikken og ser på glass."
+  > 
+    Foto fra Glassmagasinet i Bergen. Foto: Norvin reklamefoto 
+  </ImageCarousel.Item>
+
+  <ImageCarousel.Item
+    image="/images/glass/B2272_glassbeger.jpg" 
+    imageAlt="Lysegrønt, gjennomsiktig glassbeger fra Folkevandringstid."
+  > 
+    Beger i glass fra Folkevandringstid (B2272) Funnet på Klepp i Rogaland. Foto: Adnan Icagic, Universitetsmuseet i Bergen. 
+  </ImageCarousel.Item>
+
+</ImageCarousel>
+
+<Cards title="Historier om Verden i Bergen">
+  <Card title="Sammisk samling" 
+  description="I denne nettutstillingen kan du lære mer om Universitetsmuseet i Bergen sin samling av samisk kulturarv" 
+  image="/nav-card-images/vintage-fish-illustration.jpg" 
+  imageAlt="Fisk" 
+  href="https://samisksamling.w.uib.no/" />
+
+   <Card title="Om Bergens Glasmesterlaug»" 
+  description="Dykk ned i arkivene til Glarmesterlauget (glassmestere) i Bergen" 
+  image="/nav-card-images/vintage-fish-illustration.jpg" 
+  imageAlt="Fisk" 
+  href="https://marcus.uib.no/topic/667c8a39-4444-49e3-8f51-bcf04f5d0ed5" />
+
+   <Card title="Om Bergens Glasmesterlaug»" 
+  description="Dykk ned i arkivene til Glarmesterlauget (glassmestere) i Bergen" 
+  image="/nav-card-images/vintage-fish-illustration.jpg" 
+  imageAlt="Fisk" 
+  href="https://marcus.uib.no/topic/667c8a39-4444-49e3-8f51-bcf04f5d0ed5" />
+
+   <Card title="Om Bergens Glasmesterlaug»" 
+  description="Dykk ned i arkivene til Glarmesterlauget (glassmestere) i Bergen" 
+  image="/nav-card-images/vintage-fish-illustration.jpg" 
+  imageAlt="Fisk" 
+  href="https://marcus.uib.no/topic/667c8a39-4444-49e3-8f51-bcf04f5d0ed5" />
+
+</Cards>
 
 </ContentGrid>
