--- a/content/tema/arkeologi/det-brente-skipet.mdx
+++ b/content/tema/arkeologi/det-brente-skipet.mdx
@@ -12,6 +12,6 @@ keywords:
  
 # Det brente skipet
  
-<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/WcFDeUoVOY4?si=ctdM2d0TUiuOKh36" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="100%" height="100%" className="aspect-video feature" src="https://www.youtube-nocookie.com/embed/WcFDeUoVOY4?si=ctdM2d0TUiuOKh36" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
  
 </ContentGrid>
