--- a/content/tema/kirkekunst/index.mdx
+++ b/content/tema/kirkekunst/index.mdx
@@ -10,9 +10,9 @@ asIndexPage: true
 ---
 
 import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
-import { Hero, HeroImage, HeroContent, HeroTitle, HeroDescription } from '@/components/hero'
+import { Hero, HeroImage, HeroContent, HeroTitle } from '@/components/hero'
 import { Card, Cards } from '@/components/card'
-
+import { JumpToStories } from '@/components/jump-to-stories'
 
 <Hero variant="kirkekunst" className="bg-um-kirkekunst-tint/60">
   <HeroImage src="/kirkekunst-hero-ill.png" alt="Kirkekunst" className="border-um-kirkekunst-solid" />
@@ -20,9 +20,6 @@ import { Card, Cards } from '@/components/card'
     <HeroTitle>
       Kirkekunst
     </HeroTitle>
-    <HeroDescription>
-      Her er en liste over temaene
-    </HeroDescription>
   </HeroContent>
 </Hero>
 
@@ -30,6 +27,8 @@ import { Card, Cards } from '@/components/card'
 Kirkekunsten har vært viktig for museet helt siden opprettelsen i 1825. Allerede i invitasjonen om å opprette et museum definerte museets grunnlegger W.F.K. Christie hvilke 
 gjenstandskategorier han ønsket å samle inn til sitt nye museum. En av kategoriene var *Levninger af den catholske Cultus*, eller kirkekunst fra middelalderen. Christie 
 fikk også med seg biskop i Bergen Jacob Neumann inn i Direksjonen (museumsstyre). Samarbeide dem imellom førte til at museet i dag har en enestående samling av kirkekunst.
+
+<JumpToStories title="kirkekunst" />
 
 Innsamlingen bestod i stor grad av kirkekunst fra middelalderen og det er den samlingen som er mest kjent i dag. Men museet har også en flott samling av kirkekunst fra 
 etter-reformatorisk tid (1536). 
@@ -83,12 +82,13 @@ Siden den gang har altertavlen vært en sentral del av museets utstillinger, sis
   </ImageCarousel.Item>
 </ImageCarousel>
 
-<Cards title="Historier om kirkekunst">
-  <Card title="Kirkekunst 360" 
-  description="Opplev museets unike kirkekunstsamling med å vandre rundt i utstillingen digitalt" 
-  image="/nav-card-images/vintage-fish-illustration.jpg" 
-  imageAlt="Fisk" 
-  href="https://kuula.co/share/collection/7J7Sx?logo=1&info=0&fs=1&vr=1&zoom=1&initload=0&thumbs=-1" 
+<Cards id="historier" title="Historier om kirkekunst" className="full pt-10 md:pt-20">
+  <Card 
+    title="Kirkekunst 360" 
+    description="Opplev museets unike kirkekunstsamling med å vandre rundt i utstillingen digitalt" 
+    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    imageAlt="Fisk" 
+    href="https://kuula.co/share/collection/7J7Sx?logo=1&info=0&fs=1&vr=1&zoom=1&initload=0&thumbs=-1" 
   />
   <Card 
     title="Middelalderens kirkekunst" 
