--- a/content/tema/verden-i-bergen/index.mdx
+++ b/content/tema/verden-i-bergen/index.mdx
@@ -1,15 +1,15 @@
 ---
-title: Det store utland
-description: Dette er en beskrivelse av temaet det store utland.
+title: Verden i Bergen
+description: Dette er en beskrivelse av temaet Verden i Bergen.
 keywords: 
-  - utland
+  - etnografi
   - land
-  - utenriks
+  - samlinger
 asIndexPage: true
 ---
 
 import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
-import { Hero, HeroImage, HeroContent, HeroTitle, HeroDescription } from '@/components/hero'
+import { Hero, HeroImage, HeroContent, HeroTitle } from '@/components/hero'
 import { Card, Cards } from '@/components/card'
 import { JumpToStories } from '@/components/jump-to-stories'
 
@@ -17,26 +17,77 @@ import { JumpToStories } from '@/components/jump-to-stories'
   <HeroImage src="/verden-i-bergen-hero-ill.png" alt="Verden i Bergen" className="border-um-utland-solid" />
   <HeroContent>
     <HeroTitle>
-      Verden i Bergen
+      Det store utland
     </HeroTitle>
   </HeroContent>
 </Hero>
 
 <ContentGrid>
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+SETT INN TEKST NÅR KLART
 
 <JumpToStories title="verden-i-bergen" />
 
-Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Pri posse graeco definitiones cu, id eam populo quaestio adipiscing, usu quod malorum te. Pri posse graeco definitiones cu, id eam populo quaestio adipiscing, usu quod malorum te. Pri posse graeco definitiones cu, id eam populo quaestio adipiscing, usu quod malorum te. Vivendum intellegat et qui, ei denique consequuntur vix. Offendit eleifend moderatius ex vix, quem odio mazim et qui, purto expetendis cotidieque quo cu, veri persius vituperata ei nec. Vivendum intellegat et qui, ei denique consequuntur vix. Offendit eleifend moderatius ex vix, quem odio mazim et qui, purto expetendis cotidieque quo cu, veri persius vituperata ei nec. Scripta periculis ei eam, te pro movet reformidans. Sit fugit nostrum et. Cum ne case tation rationibus, nam ad iusto atomorum assueverit. Vivendum intellegat et qui, ei denique consequuntur vix. Te quo atqui libris, dicta aeque usu an.
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Pri posse graeco definitiones cu, id eam populo quaestio adipiscing, usu quod malorum te. Saepe imperdiet at per, appareat vituperata vix te, pri sint assueverit te. Offendit eleifend moderatius ex vix, quem odio mazim et qui, purto expetendis cotidieque quo cu, veri persius vituperata ei nec. Ridens nostro perfecto ad cum, debet omnes splendide sit eu, vix an iisque dissentias. Scripta periculis ei eam, te pro movet reformidans. Pri posse graeco definitiones cu, id eam populo quaestio adipiscing, usu quod malorum te. Pri posse graeco definitiones cu, id eam populo quaestio adipiscing, usu quod malorum te. Scripta periculis ei eam, te pro movet reformidans. Vivendum intellegat et qui, ei denique consequuntur vix. Pri posse graeco definitiones cu, id eam populo quaestio adipiscing, usu quod malorum te. Sed no sumo stet, est ei quodsi feugait liberavisse, in pro quot facete definitiones.
 
-<Cards id="historier" title="Historier om verden i Bergen" className="full pt-10 md:pt-20">
+<ImageCarousel className="feature" title="Verden i Bergen">
+  <ImageCarousel.Item
+    image="/images/glass/By136_flaske.jpg" 
+    imageAlt="En glassflaske formet som pistol, i blått glass 36 cm lang"
+  > 
+    Glassflasken formet som en pistol. Foto: Stine Dornfest, Universitetsmuseet i Bergen
+  </ImageCarousel.Item>
+
+  <ImageCarousel.Item
+    image="/images/glass/Christie sitt notat.png" 
+    imageAlt="Et arkiv med håndskriften til Christie, hvor han beskriver glassflasken"
+  >
+    W.F.K. Christie sitt notat om glassflasken (Universitetsbiblioteket i Bergen)
+  </ImageCarousel.Item>
+
+  <ImageCarousel.Item
+    image="/images/glass/ubb-nor-b-0723_xl_Glassmagasin.jpg" 
+    imageAlt="Foto av glassmagasinet i Bergen. En kvinne og en mann står i butikken og ser på glass."
+  > 
+    Foto fra Glassmagasinet i Bergen. Foto: Norvin reklamefoto 
+  </ImageCarousel.Item>
+
+  <ImageCarousel.Item
+    image="/images/glass/B2272_glassbeger.jpg" 
+    imageAlt="Lysegrønt, gjennomsiktig glassbeger fra Folkevandringstid."
+  > 
+    Beger i glass fra Folkevandringstid (B2272) Funnet på Klepp i Rogaland. Foto: Adnan Icagic, Universitetsmuseet i Bergen. 
+  </ImageCarousel.Item>
+
+</ImageCarousel>
+
+<Cards id="historier" title="Historier om Verden i Bergen" className="full pt-10 md:pt-20">
   <Card 
-    title="Christie og de «mærkelige Fiske»" 
-    description="" 
+    title="Samisk samling" 
+    description="I denne nettutstillingen kan du lære mer om Universitetsmuseet i Bergen sin samling av samisk kulturarv" 
     image="/nav-card-images/vintage-fish-illustration.jpg" 
     imageAlt="Fisk" 
-    href="/tema/fisk/christie-og-de-maerkelige-fiske" 
+    href="https://samisksamling.w.uib.no/" 
+  />
+   <Card 
+    title="Om Bergens Glarmesterlaug" 
+    description="Dykk ned i arkivene til Glarmesterlauget (glassmestere) i Bergen" 
+    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    imageAlt="Fisk" 
+    href="https://marcus.uib.no/topic/667c8a39-4444-49e3-8f51-bcf04f5d0ed5" 
+  />
+   <Card 
+    title="Om Bergens Glarmesterlaug" 
+    description="Dykk ned i arkivene til Glarmesterlauget (glassmestere) i Bergen" 
+    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    imageAlt="Fisk" 
+    href="https://marcus.uib.no/topic/667c8a39-4444-49e3-8f51-bcf04f5d0ed5" 
+  />
+   <Card 
+    title="Om Bergens Glarmesterlaug" 
+    description="Dykk ned i arkivene til Glarmesterlauget (glassmestere) i Bergen" 
+    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    imageAlt="Fisk" 
+    href="https://marcus.uib.no/topic/667c8a39-4444-49e3-8f51-bcf04f5d0ed5" 
   />
 </Cards>
 
